# ksc

./: .gitignore  PHILOSOPHY.md  README.md  SPECIFICATION.md  USAGE.md  dune-project  test.ks  test_bool.ks  test_compare.ks  test_complex.ks  test_simple.ks
.github/workflows/: ci.yml
_build/: .db  .digest-db  log
_build/default/: META.ksharp-compiler  ksharp-compiler.dune-package  ksharp-compiler.install
_build/default/src/: ast.ml  codegen.ml  ksharp.cma  ksharp.cmxa  ksharp.cmxs  ksharp.ml-gen  lexer.ml  parser.ml  parser.mli  parser__mock.ml.mock  parser__mock.mli.inferred  semantic.ml
_opam/.opam-switch/: environment  switch-config  switch-state
_opam/.opam-switch/install/: dune.changes  menhir.changes  menhirCST.changes  menhirLib.changes  menhirSdk.changes  ocaml-config.changes  ocaml-system.changes  ocaml.changes  ocamlfind.changes
_opam/lib/: findlib.conf
_opam/lib/findlib/: Makefile.config  findlib.cma  findlib.cmxa  findlib.cmxs  findlib_config.cmi  findlib_config.ml  findlib_dynload.cma  findlib_dynload.cmxs  findlib_top.cma  findlib_top.cmxs
_opam/lib/menhirCST/: menhirCST.cma  menhirCST.cmt  menhirCST.cmxs  menhirCST__Settle.cmt  menhirCST__Settle.cmti
_opam/lib/menhirLib/: menhirLib.cma  menhirLib.cmi  (+5 more)
docs/: CONTRIBUTING.md
examples/basic/: hello.ks
src/: ast.ml  codegen.ml  compiler.ml  dune  ksharp.ml  lexer.mll  parser.mly  semantic.ml
src/ast/: dune
src/codegen/: codegen.ml  dune
src/compiler/: dune
src/lexer/: dune  lexer.mll
src/parser/: dune  parser.mly
src/semantic/: dune  semantic.ml
test/: dune  test_parser.ml
(+81 files in other folders)
