(lang dune 3.11)

(using menhir 2.1)

(name ksharp-compiler)

(version 0.1.0)

(authors "Luvion")

(maintainers "Luvion")

(homepage "https://github.com/Luvion1/ksc")

(bug_reports "https://github.com/Luvion1/ksc/issues")

(source
 (github Luvion1/ksc))

(license MIT)

(package
 (name ksharp-compiler)
 (synopsis "Compiler for K# programming language")
 (description "A compiler for the K# language, implemented in OCaml"))